# worm

./: .gitignore  Cargo.toml  LICENSE
examples/: animals.json  complex.json  jap-rus.json
src/: help.rs  layout.rs  main.rs  shortcuts.rs  test_data.rs
src/card/: card_data.rs  card_logic.rs  card_ui.rs  mod.rs
src/select/: mod.rs  select_data.rs  select_logic.rs  select_ui.rs
