[package]
name = "worm"
version = "0.0.1"
authors = ["franc90 <azarnowski1@gmail.com>"]
edition = "2018"


[dependencies]
serde_json = "1.0.59"
crossterm = "0.18.0"
clap = "2.33.3"
rand = "0.7.3"
simplelog = "0.8.0"
log = "0.4.11"

[dependencies.serde]
version = "1.0.117"
features = ["derive"]

[dependencies.cursive]
version = "0.15"
default-features = false
features = ["crossterm-backend"]